--- a/tox.ini
+++ b/tox.ini
@@ -12,19 +12,20 @@ passenv =
     DEEPL_API_KEY
 dependency_groups = docs
 commands:
-    !lint-!all-!translate-!live-!en-!de-!es-!fr-!it-!pt-!zh-cn-!zh-tw : build_md_translations {posargs} en
-    translate : build_pot_translations
-    translate : build_po_translations de es fr it pt zh_CN zh_TW
-    translate : update_machine_translations --soft-fail de es fr it pt zh_CN zh_TW
-    lint : markdown-checker --dir {[docs]docs_dir} --func check_broken_urls
-    lint : pyspelling
+    !lint-!all-!translate-!live-!en-!de-!es-!fr-!it-!pt-!zh-cn-!zh-tw : build_md_translations {posargs} en --build-with-warnings
+    # translate : build_pot_translations
+    # translate : build_po_translations de es fr it pt zh_CN zh_TW
+    # translate : update_machine_translations --soft-fail de es fr it pt zh_CN zh_TW
+    # lint : markdown-checker --dir {[docs]docs_dir} --func check_broken_urls
+    # TODO: Reenable pyspelling in final
+    # lint : pyspelling
     live : live_serve_en {posargs} --build-with-warnings
-    all : build_md_translations {posargs} en de es fr it pt zh_CN zh_TW
-    en : build_md_translations {posargs} en
-    de : build_md_translations {posargs} de
-    es : build_md_translations {posargs} es
-    fr : build_md_translations {posargs} fr
-    it : build_md_translations {posargs} it
-    pt : build_md_translations {posargs} pt
-    zh-cn : build_md_translations {posargs} zh_CN
-    zh-tw : build_md_translations {posargs} zh_TW
+    # all : build_md_translations {posargs} en de es fr it pt zh_CN zh_TW
+    en : build_md_translations {posargs} en --build-with-warnings
+    # de : build_md_translations {posargs} de
+    # es : build_md_translations {posargs} es
+    # fr : build_md_translations {posargs} fr
+    # it : build_md_translations {posargs} it
+    # pt : build_md_translations {posargs} pt
+    # zh-cn : build_md_translations {posargs} zh_CN
+    # zh-tw : build_md_translations {posargs} zh_TW
