--- a/docs-redirect/.readthedocs.yaml
+++ b/docs-redirect/.readthedocs.yaml
@@ -7,7 +7,7 @@
      jobs:
        pre_install:
          - python -m pip install --upgrade pip
-         - python -m pip install --group redirects
+         - python -m pip install --group 'redirects'
 
  mkdocs:
    configuration: docs-redirect/mkdocs.yml
