--- a/docs/en/news/.authors.yml
+++ b/docs/en/news/.authors.yml
@@ -4,19 +4,10 @@ authors:
     short_name: Russell
     description: Founding Apiarist
     avatar: about/images/freakboy3742.png
-    url: about/team/#russell-keith-magee
+    url: about/team/#freakboy3742
     join_date: 2013-09-05
     mastodon: "@freakboy3742@cloudisland.nz"
     email: russell@beeware.org
-    bio: |
-      Dr Russell Keith-Magee is the founder of the BeeWare project. He joined
-      the Django core team in 2006, and for 5 years, was President of the
-      Django Software Foundation. He has been a member of the CPython core
-      team since May 2024.
-
-      Russell is a Principal Software Engineer in the Open Source group at
-      [Anaconda](https://www.anaconda.com/) [(a BeeWare Gold
-      sponsor)](/community/members/anaconda/).
   kattni:
     name: Kattni
     short_name: Kattni
@@ -26,231 +17,133 @@ authors:
     join_date: 2025-10-05
     mastodon: "@kattni@kattstodon.com"
     email: kattni@beeware.org
-    bio: |
-      Kattni is a creator, community leader, programmer, technical writer, maker,
-      photographer, intermittent chef, classically trained vocalist, air plant
-      cultivator, and fledgling synth nerd. She is passionate about building
-      communities, learning, mentoring, and sharing her knowledge in an approachable
-      way. She will always have a special place in her heart for making things
-      blinky and bright. She is tolerated by a cat and three kittens who continue
-      to let her live with them.
   mhsmith:
     name: Malcolm Smith
     short_name: Malcolm
     description: Apiarist
     avatar: about/images/mhsmith.png
-    url: about/team/#malcolm-smith
+    url: about/team/#mhsmith
     join_date: 2022-08-31
     email: smith@chaquo.com
-    bio: |
-      Malcolm is the creator of Chaquopy, which aims to make it as easy as
-      possible to use Python in Android apps. With BeeWare, he's now looking
-      forward to expanding that mission to all desktop and mobile platforms.
-
-      Malcolm is a Senior Software Engineer in the Open Source group at
-      [Anaconda](https://www.anaconda.com/) [(a BeeWare Gold
-      sponsor)](/community/members/anaconda/).
   glasnt:
     name: Katie McLaughlin
     short_name: Katie
     description: Senior Apiarist
     avatar: about/images/glasnt.png
-    url: ..about/team/#katie-mclaughlin
+    url: ..about/team/#glasnt
     join_date: 2016-04-02
     mastodon: "@glasnt@cloudisland.nz"
     email: katie@beeware.org
-    bio: |
-      Katie has worn many different hats over the years. They have previously
-      been a software developer for many languages, systems administrator for
-      multiple operating systems, and speaker on many different topics.
-
-      When they're not changing the world, they enjoy cooking, making
-      tapestries, and seeing just how well various application stacks handle
-      emoji.
   phildini:
     name: Philip James
     short_name: Philip
     description: Senior Apiarist
     avatar: about/images/phildini.png
-    url: about/team/#philip-james
+    url: about/team/#phildini
     join_date: 2016-06-03
-    mastodon: "@phildini@phildini.net"
+    mastodon: "@phildini@wandering.shop"
     email: philip@beeware.org
-    bio: |
-      Philip writes code for computers and for humans. His first computing
-      love is Python, but is too often forced to write JavaScript and Swift.
-      When he's not writing code for money or for Open Source or for his own
-      crazy projects, he gives talks at conferences. Philip lives in Alameda,
-      California with his wife and her cat. Philip believes in the web.
   hawkowl:
     name: Amber Brown
     short_name: Amber
     description: Team Member Emeritus
     avatar: about/images/hawkowl.png
-    url: about/team/#amber-brown
+    url: about/team/#hawkowl
     join_date: 2016-10-13
     emeritus_date: 2025-12-15
     email: hawkowl@atleastfornow.net
-    bio: |
-      Amber Brown pretends to be an owl on the internet. When she's not
-      releasing or working on Twisted, she works on software for various
-      commercial and non-profit companies. She's so good at talking endlessly
-      about Twisted that Russell even once invited her to keynote on it.
-
-      Also, she likes people tweeting pictures of owls at her.
   danyeaw:
     name: Dan Yeaw
     short_name: Dan
     description: Team Member Emeritus
     avatar: about/images/danyeaw.png
-    url: about/team/#dan-yeaw
+    url: about/team/#danyeaw
     join_date: 2018-02-28
     emeritus_date: 2021-05-01
     mastodon: "@danyeaw@fosstodon.org"
     email: dan@yeaw.me
-    bio: |
-      Dan leads teams to design safety in to complex automotive and mobility
-      systems, and dreams of using BeeWare tools to help model these systems.
-
-      When not hacking on open source projects, Dan likes to hang with his
-      kids, brew beer, and play soccer.
   rmartin16:
     name: Russell Martin
     short_name: Russell M.
     description: Apiarist
     avatar: about/images/rmartin16.png
-    url: about/team/#russell-martin
+    url: about/team/#rmartin16
     join_date: 2022-08-31
     email: rmartin16@gmail.com
-    bio: |
-      Russell is a tinkerer and aspiring creator. He fell in love with python
-      years ago and wants to see apps built with it everywhere. If he isn't
-      writing code, he's probably falling down a Wikipedia rabbit hole or
-      playing sysadmin to his bloated home lab.
   swenson:
     name: Christopher Swenson
     short_name: Christopher
     description: Team Member Emeritus
     avatar: about/images/swenson.png
-    url: about/team/#christopher-swenson
+    url: about/team/#swenson
     join_date: 2016-09-07
     emeritus_date: 2021-05-01
     mastodon: "@chris_swenson@tweets.icu"
     email: swenson@beeware.org
-    bio: |
-      Dr. Christopher Swenson is a software engineer, computer scientist, and
-      occasional mathematician. Swenson has been working with Python since
-      about 2004, and involved in open source since before knowing what open
-      source really was. Swenson likes sorting a lot, and maintains an open
-      source high-performance C sorting library. Swenson has sold their labor
-      to companies big and small, such as Simple, Google, and the US
-      Government, and wrote a book on cryptography. Swenson is an organizer of
-      PyDX. Swenson is a cupcake.
   halfwhitt:
     name: Charles Whittington
     short_name: Charles
     description: Apiarist
     avatar: about/images/halfwhitt.png
-    url: about/team/#charles-whittington
+    url: about/team/#halfwhitt
     join_date: 2024-03-24
     email: charleswhitt@gmail.com
-    bio: |
-      As a comic artist, machinist, welder, carpenter, and programmer, Charles
-      has worn many hats (but more commonly sticks to a bandana). If they're
-      not building theater sets for a living or chasing yaks ever downward
-      through Toga and Travertino, they're probably building yet another
-      shelving or other storage unit in their house.
   cflee:
     name: Chiang Fong Lee
     short_name: Chiang Fong
     description: Team Member Emeritus
     avatar: about/images/cflee.png
-    url: about/team/#chiang-fong-lee
+    url: about/team/#cflee
     join_date: 2017-03-11
     emeritus_date: 2020-06-01
     mastodon: "@cflee@hachyderm.io"
     email: myself@cflee.net
-    bio: |
-      Chiang Fong has been pretending to be a systems administrator since the
-      Mandriva Linux days, and has recently moved into acting like he knows
-      how to write software.
-
-      When not poking at code to de-stress, he spends his time fiddling with
-      fountain pens and mechanical keyboards. He has yet to learn the lesson
-      of not mixing inky fingers with pretty keycaps.
   eliasdorneles:
     name: Elias Dorneles
     short_name: Elias
     description: Team Member Emeritus
     avatar: about/images/elias.png
-    url: about/team/#elias-dorneles
+    url: about/team/#eliasdorneles
     join_date: 2017-03-01
     emeritus_date: 2020-06-03
     email: eliasdorneles@gmail.com
-    bio: |
-      Elias is a certified yak-shaver. He likes to fiddle with Python and open
-      source stuff. At home, he likes to read, cook and to play Beatles songs
-      on his guitar.
-
-      Elias gets by with a little help from his friends.
   obulat:
     name: Olga Bulat
     short_name: Olga
     description: Team Member Emeritus
     avatar: about/images/obulat.png
-    url: about/team/#olga-bulat
+    url: about/team/#obulat
     email: obulat@gmail.com
     join_date: 2018-03-05
     emeritus_date: 2025-12-05
-    bio: |
-      Olga is a python and BeeWare enthusiast, also interested in NLP,
-      geography and languages.
-
-      She also enjoys hanging out with kids.
   samschott:
     name: Sam Schott
     short_name: Sam
     description: Team Member Emeritus
     avatar: about/images/samschott.png
-    url: about/team/#sam-schott
+    url: about/team/#samschott
     email: sam.schott@outlook.com
     join_date: 2021-07-29
     emeritus_date: 2025-12-12
-    bio: |
-      Sam is a physicist and a software engineer. He got introduced to Python
-      while automating data acquisition in the lab and soon realised that he
-      enjoyed writing and sharing code. When away from a computer, you will
-      find him hiking or sailing along the English coast.
   flowerncsu:
     name: Charlotte Mays
     short_name: Charlotte
     description: Team Member Emeritus
     avatar: about/images/flowerncsu.png
-    url: about/team/#charlotte-mays
+    url: about/team/#flowerncsu
     mastodon: "@charlotte@hachyderm.io"
     email: charlotte@charlottemays.me
     join_date: 2017-08-17
     emeritus_date: 2025-12-15
-    bio: |
-      Charlotte has been coding for more years than she likes to admit, and
-      has a passion for building cool things and helping other people learn
-      how to build cool things. She is among the organizers of PyLadies RDU,
-      and can often be found making things out of yarn when not making things
-      out of code.
   saroad2:
     name: Sagi Shadur
     short_name: Sagi Shadur
     description: Team Member Emeritus
     avatar: about/images/saroad2.png
-    url: about/team/#sagi-shadur
+    url: about/team/#saroad2
     email: saroad2@gmail.com
     join_date: 2020-05-31
     emeritus_date: 2025-12-15
-    bio: |
-      Sagi Shadur is a software engineer and a mathematician. He has a B.Sc.
-      in mathematics and these days he's on his way for a second B.Sc. in
-      physics. He's also a poet who published two books in Hebrew, "Mountains
-      and Valleys" and "The Emissary".
   BPYap:
     name: Yap Boon Peng
     short_name: B. P. Yap
