--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands:
      translate : build_po_translations ar cs da de es fr it ko pl pt tr zh_CN zh_TW
     # translate : update_machine_translations --soft-fail ar cs da de es fr it ko pl pt tr zh_CN zh_TW
      lint : pyspelling
-     lint : markdown-checker --dir {[docs]docs_dir} --func check_broken_urls
+     lint : markdown-checker --dir {[docs]docs_dir} --func check_broken_urls --skip-domains=https://www.maxcdn.com/blog/beeware-be-sticky/,http://glasnt.com/blog/2017/02/01/come-sprint-with-beeware.html
     live : live_serve_en {posargs} --port=8042
     all : build_md_translations {posargs} en ar cs da de es fr it ko pl pt tr zh_CN zh_TW
     en : build_md_translations {posargs} en
