--- a/docs/mkdocs.zh_CN.yml
+++ b/docs/mkdocs.zh_CN.yml
@@ -4,7 +4,7 @@ site_url: https://beeware.org/
 docs_dir: zh_CN
 
 theme:
-  language: zh-Hant
+  language: zh
 
 extra:
   translation_type: machine
