--- a/docs/mkdocs.ko.yml
+++ b/docs/mkdocs.ko.yml
@@ -13,3 +13,11 @@ plugins:
   macros:
     include_yaml:
         - team: ko/news/.authors.yml
+
+nav:
+  - About: Le About
+  - Documentation: Le Documentation
+  - Community: Le Community
+  - Contributing: Le Contributing
+  - News: Le News
+  - Sponsor: Le Sponsor
