--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = docs-lint,docs-all
 [docs]
 docs_dir = {tox_root}{/}docs{/}en
 
-[testenv:docs{,-lint,-translate,-all,-live,-en,-ar,-cs,-da,-de,-es,-fr,-it,-ko,-pl,-pt,-tr,-zh-cn,-zh-tw}]
+[testenv:docs{,-translate,-lint,-en,-ar,-cs,-da,-de,-es,-fa,-fr,-it,-ko,-pl,-pt,-tr,-zh-cn,-zh-tw,-all,-serve,-live}]
 # Docs are always built on Python 3.12. See also the RTD config.
 base_python = py312
 skip_install = true
@@ -12,20 +12,19 @@ passenv =
     DEEPL_API_KEY
 dependency_groups = docs
 commands:
-    !lint-!all-!translate-!live-!en-!ar-!cs-!da-!de-!es-!fr-!it-!ko-!pl-!pt-!tr-!zh-cn-!zh-tw : build_md_translations {posargs} en
+    !translate-!lint-!en-!ar-!cs-!da-!de-!es-!fa-!fr-!it-!ko-!pl-!pt-!tr-!zh-cn-!zh-tw-!all-!serve-!live : build_md_translations {posargs} en
     translate : build_pot_translations --exclude=news
-    translate : build_po_translations ar cs da de es fr it ko pl pt tr zh_CN zh_TW
-    # translate : update_machine_translations --soft-fail ar cs da de es fr it ko pl pt tr zh_CN zh_TW
+    translate : build_po_translations ar cs da de es fa fr it ko pl pt tr zh_CN zh_TW
+    translate : update_machine_translations --soft-fail ar cs da de es fa fr it ko pl pt tr zh_CN zh_TW
     lint : pyspelling
     lint : markdown-checker --dir {[docs]docs_dir} --func check_broken_urls --skip-domains=https://www.maxcdn.com/blog/beeware-be-sticky/,http://glasnt.com/blog/2017/02/01/come-sprint-with-beeware.html
-    live : live_serve_en {posargs} --port=8042
-    all : build_md_translations {posargs} en ar cs da de es fr it ko pl pt tr zh_CN zh_TW
     en : build_md_translations {posargs} en
     ar : build_md_translations {posargs} ar
     cs : build_md_translations {posargs} cs
     da : build_md_translations {posargs} da
     de : build_md_translations {posargs} de
     es : build_md_translations {posargs} es
+    fa : build_md_translations {posargs} fa
     fr : build_md_translations {posargs} fr
     it : build_md_translations {posargs} it
     ko : build_md_translations {posargs} ko
@@ -34,3 +33,6 @@ commands:
     tr : build_md_translations {posargs} tr
     zh-cn : build_md_translations {posargs} zh_CN
     zh-tw : build_md_translations {posargs} zh_TW
+    all : build_md_translations {posargs} en ar cs da de es fa fr it ko pl pt tr zh_CN zh_TW
+    serve : python -m http.server -d _build/html
+    live : live_serve_en {posargs} --port=8042
