--- a/docs/config.yml
+++ b/docs/config.yml
@@ -116,6 +116,9 @@ extra:
     - name: Italiano
       link: /it/
       lang: it
+    - name: 日本語
+      link: /ja/
+      lang: ja
     - name: 한국어
       link: /ko/
       lang: ko
@@ -125,6 +128,9 @@ extra:
     - name: Português
       link: /pt/
       lang: pt
+    - name: Русский
+      link: /ru/
+      lang: ru
     - name: Türkçe
       link: /tr/
       lang: tr
