--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Update pip
         run: python -m pip install -U pip
 
-      - name: Install tox
-        run: python -m pip install --group docs
+      - name: Install Tox
+        run: python -m pip install --group 'tox-uv'
 
       - name: Perform lint checks
         run: python -m tox -e docs-lint
