--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     with:
       pre-commit-source: "--group pre-commit"
 
-  build:
+  lint:
     needs: [ pre-commit ]
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -53,6 +53,32 @@ jobs:
 
       - name: Perform lint checks
         run: python -m tox -e docs-lint
+
+  build:
+    needs: [ pre-commit ]
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.2
+        with:
+          fetch-depth: 1
+          token: ${{ secrets.BRUTUS_PAT_TOKEN }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v6.2.0
+        with:
+          python-version: "3.X"
+          cache: pip
+          cache-dependency-path: |
+            pyproject.toml
+            .pre-commit-config.yaml
+
+      - name: Update pip
+        run: python -m pip install -U pip
+
+      - name: Install Tox
+        run: python -m pip install --group 'tox-uv'
 
       - name: Build the site
         run: python -m tox -e docs-all
