--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,10 @@ jobs:
             pyproject.toml
             .pre-commit-config.yaml
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get install aspell aspell-en
+
       - name: Update pip
         run: python -m pip install -U pip
 
