--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,4 +19,4 @@ build:
       - python -m tox -e docs-lint
     build:
       html:
-        - python -m tox -e docs-$READTHEDOCS_LANGUAGE -- --output=$READTHEDOCS_OUTPUT/html/
+        - python -m tox -e docs-all -- --output=$READTHEDOCS_OUTPUT/html/
