--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,3 +20,4 @@ build:
     build:
       html:
         - python -m tox -e docs-all -- --output=$READTHEDOCS_OUTPUT/html/
+        - cp -r $READTHEDOCS_OUTPUT/html/en/* $READTHEDOCS_OUTPUT/html
