Proof of concept with one-shot docs-tools.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dev = [
 ]
 
 docs = [
-    "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
+    # "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
+    "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools@rtd-one-shot",
+    # "beeware-docs-tools @ file://../beeware-docs-tools",
     {include-group = "redirects"},
 ]
 
