--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ dev = [
 ]
 
 docs = [
-    # "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
-    "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools@rtd-one-shot",
+    "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
     # "beeware-docs-tools @ file://../beeware-docs-tools",
     {include-group = "redirects"},
 ]
