--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,14 +9,12 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    # Docs are always built on Python 3.12. See also the tox config.
-    python: "3.12"
+    # Docs are always built on Python 3.13. See also the tox config.
+    python: "3.13"
   jobs:
     pre_install:
       - python -m pip install --upgrade pip
       - python -m pip install --group 'tox-uv'
-    pre_build:
-      - python -m tox -e docs-lint
     build:
       html:
-        - python -m tox -e docs-$READTHEDOCS_LANGUAGE -- --output=$READTHEDOCS_OUTPUT/html/
+        - python -m tox -e docs-all -- --output=$READTHEDOCS_OUTPUT/html/
