--- a/docs/config.yml
+++ b/docs/config.yml
@@ -261,6 +261,7 @@ plugins:
     abstract_chars_count: -1
   redirects:
     redirect_maps:
+      # shortlinks
       "bee/briefcase-bootstraps.md": "https://briefcase.beeware.org/en/latest/reference/commands/new.html#third-party-bootstraps"
       "bee/chat.md": "https://discord.gg/AjYYm8cyQM"
       "bee/coc.md": "community/code-of-conduct.md"
@@ -269,3 +270,5 @@ plugins:
       "bee/signup.md": "about/contact.md"
       "bee/sprint.md": "contributing/sprint-guide.md"
       "bee/sprints.md": "contributing/sprint-guide.md"
+      # Historical links of significance
+      "community/behavior/code-of-conduct.md": "community/code-of-conduct.md"
