--- a/docs/config.yml
+++ b/docs/config.yml
@@ -129,10 +129,10 @@ extra:
       link: /tr/
       lang: tr
     - name: 中文(简体)
-      link: /zh-cn/
+      link: /zh_CN/
       lang: zh-Hant
     - name: 中文(繁體)
-      link: /zh-tw/
+      link: /zh_TW/
       lang: zh-TW
 
 
