--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,9 @@
-name: CI
+name: Publish site
 on:
-  pull_request:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 # Cancel active CI runs for a PR before starting another run
 concurrency:
@@ -15,14 +18,10 @@ env:
   FORCE_COLOR: "1"
 
 jobs:
-  pre-commit:
-    name: Pre-commit checks
-    uses: beeware/.github/.github/workflows/pre-commit-run.yml@main
-    with:
-      pre-commit-source: "--group pre-commit"
-
-  lint:
-    needs: [ pre-commit ]
+  publish:
+    name: Build and publish site
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -40,15 +39,19 @@ jobs:
             pyproject.toml
             .pre-commit-config.yaml
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get install aspell aspell-en
-
       - name: Update pip
         run: python -m pip install -U pip
 
       - name: Install Tox
         run: python -m pip install --group 'tox-uv'
 
-      - name: Perform lint checks
-        run: python -m tox -e docs-lint
+      - name: Build the site
+        run: python -m tox -e docs-all
+
+      - name: Deploy the built files
+        uses: JamesIves/github-pages-deploy-action@v4.8.0
+        with:
+          folder: _build/html  # The folder the action should deploy.
+          branch: gh-pages  # The branch to which the action should deploy.
+          git-config-name: github-actions[bot]
+          git-config-email: 41898282+github-actions[bot]@users.noreply.github.com
