Initial setup for Japanese and Russian. (#23)
Co-authored-by: Russell Keith-Magee <russell@keith-magee.com>

--- a/docs/mkdocs.ja.yml
+++ b/docs/mkdocs.ja.yml
@@ -1,10 +1,10 @@
 INHERIT: config.yml
 site_name: BeeWare
 site_url: https://beeware.org/
-docs_dir: ko
+docs_dir: ja
 
 theme:
-  language: ko
+  language: ja
 
 extra:
   translation_type: machine
