--- a/docs/mkdocs.ru.yml
+++ b/docs/mkdocs.ru.yml
@@ -1,10 +1,10 @@
 INHERIT: config.yml
 site_name: BeeWare
 site_url: https://beeware.org/
-docs_dir: ko
+docs_dir: ru
 
 theme:
-  language: ko
+  language: ru
 
 extra:
   translation_type: machine
